Switched weather API used, added check for previous columns
Switched from Yahoo Weather API to Dark Sky API as Yahoo weather does not
tell information about chance of precipitation and Yahoo recently switched
their API usage policy, which also rendered the packaged used to be
broken for now.

The script now checks if the previous column is filled, else it fills it
now with the current travel time.

--- a/SAMPLE-config.json
+++ b/SAMPLE-config.json
@@ -2,6 +2,7 @@
 "starting_point_coordinates":[0,0],
 "destination_point_coordinates":[0,0],
 "city":"x",
+"DarkSky_API_key":"DarkSky_API.txt",
 "google_maps_API_key": "x",
 "google_sheets_API_key": "x",
 "google_sheet_ID": "x",
