--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 certifi==2018.11.29
 chardet==3.0.4
+forecastiopy==0.22
+future==0.17.1
+geographiclib==1.49
+geojson==2.4.1
+geopy==1.18.1
 gevent==1.3.7
 googlemaps==3.0.2
 greenlet==0.4.15
@@ -10,9 +15,10 @@ oauth2client==4.1.3
 pushbullet.py==0.11.0
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
+python-magic==0.4.15
 requests==2.21.0
+responses==0.10.5
 rsa==4.0
 six==1.12.0
 urllib3==1.24.1
-weather-api==1.0.6
 websocket-client==0.54.0
